Build: 1.16.4-35.0.7 - Sun Nov 08 04:12:02 GMT 2020
	cpw:
		Some help in ExtensionPoint regarding DISPLAYTEST. Let's improve those tick rates!
		
		Signed-off-by: cpw <cpw+github@weeksfamily.ca>

=========
Build: 1.16.4-35.0.6 - Sun Nov 08 03:30:37 GMT 2020
	cpw:
		Handle erroring during early mod construction phases, and actually report that into the error UI
		by doing armslength exception handling and propagation.
		
		Signed-off-by: cpw <cpw+github@weeksfamily.ca>

=========
Build: 1.16.4-35.0.5 - Sun Nov 08 01:48:22 GMT 2020
	cpw:
		Support backwards loading 1.16.3 mods in 1.16.4, because we are able to do that. Tweak loading a bit to be smarter about dependency errors of various kinds.
		
		Signed-off-by: cpw <cpw+github@weeksfamily.ca>

=========
Build: 1.16.4-35.0.4 - Sat Nov 07 20:10:44 GMT 2020
	David Quintana:
		Add FluidStack codec, and a test mod that verifies its behaviour matches the existing write/read logic.
		Add missing license headers.

=========
Build: 1.16.4-35.0.3 - Sat Nov 07 02:11:47 GMT 2020
	cpw:
		Update event bus version (should be 3.0.5)
		
		Tweak MDK to automatically populate recommended values for things like forge version, loader version and minecraft version.
		
		Signed-off-by: cpw <cpw+github@weeksfamily.ca>

=========
Build: 1.16.4-35.0.2 - Wed Nov 04 00:07:58 GMT 2020
	diesieben07:
		Workaround for modded attributes on vanilla entities logging warnings on vanilla clients
		
		Switch to a handler-based approach per packet class, simplify patch, add some docs
		
		Add license header and docs
		
		Switch to a network handler based approach
		
		Switch to a network handler based approach
		
		revert build gradle change
		
		Simplify Packet patch
		
		Add license header to IForgePacket
		
		Revert ForgeHooks changes
		
		Less hacky and more generic way to filter packets for vanilla connections
		
		_Actually_ Order SAS.
		It's early
		
		Order SAS
		
		simplify vanilla connection check
		
		Remove unneeded import change

=========