@@ -3,4 +3,9 @@
 For MC 1.16.4  
 
 ♫ Deck the mines with boughs of holly! ♫  
-Wrap presents, eat holiday sweets, and decorate your Minecraft world with Christmas-themed features! 
+Wrap presents, eat holiday sweets, and decorate your Minecraft world with Christmas-themed features!
+
+###This fork fixes an incompatibility bug with FakeName.
+You may be impacted by this bug if your Minecraft Client crashes while using FakeName with the following error:
+
+`io.netty.handler.codec.EncoderException: String too big (was 6 bytes encoded, max 5)`
