@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod Version Information
-mod_version=1.0.13
+mod_version=1.0.14
 
 # Minecraft Version Information
 minecraft_base_version=1.16
